--- a/Poof-O-Floof-ui/src/app/app.component.html
+++ b/Poof-O-Floof-ui/src/app/app.component.html
@@ -315,9 +315,15 @@
   </a>
 </div>
 
-<button (click)="printCoords()">
-  Print Coordinates
+<button (click)="getLocationByPermission()">
+  Get Location by Permission
 </button>
+
+
+<button (click)="printLocation()">
+  Print Location
+</button>
+
 
 <div class="content" role="main">
   <div class="container">
