polished main-photo component. Still needs some work.

--- a/Poof-O-Floof-ui/src/app/app.component.html
+++ b/Poof-O-Floof-ui/src/app/app.component.html
@@ -315,8 +315,9 @@
   </a>
 </div>
 
-<button (click)="printCoords()">
-  Print Coordinates
+<h4>User Coordinates: {{userIpLocInfo.coords}}</h4>
+<button (click)="getUserIpLocInfo()">
+  Update Coordinates
 </button>
 
 <div class="content" role="main">
