--- a/Poof-O-Floof-ui/src/app/main-photo/main-photo.component.html
+++ b/Poof-O-Floof-ui/src/app/main-photo/main-photo.component.html
@@ -1,20 +1,25 @@
-<p>main-photo works!</p>
-
-<button (click)="getTestPhotoUrl()">
-  Get New Test Photo
+<button (click)="nextRandomPhoto()">
+  Get Next Random Photo
 </button>
 <br />
 <br />
 
 <div>
-  <img src="{{testPhotoUrl}}">
+  <h3>photoDisplayIndex: {{photoDisplayIndex}}</h3>
+  <h3>photoStreamIndex: {{photoStreamIndex}}</h3>
+  <h3>mainFramePhotoUrl: {{mainFramePhotoUrl}}</h3>
+  <img src="{{mainFramePhotoUrl}}">
 </div>
 
 <button (click)="getNewPhotoUrl()">
-  Get New Photo
+  Get A New Photo
 </button>
 <br />
 <br />
+
+<div>
+    <img src="{{photoUrl}}">
+  </div> -->
 
 <div class="text-center">
   <div class="col-sm-8 offset-sm-2">
@@ -24,7 +29,3 @@
 
 <br />
 <br />
-
-<div>
-  <img src="{{photoUrl}}">
-</div>
