--- a/Poof-O-Floof-ui/src/app/app.component.html
+++ b/Poof-O-Floof-ui/src/app/app.component.html
@@ -315,6 +315,8 @@
   </a>
 </div>
 
+<app-nav></app-nav>
+
 <h4>User Coordinates: {{userIpLocInfo.coords}}</h4>
 <button (click)="getUserIpLocInfo()">
   Update Coordinates
