Can now display photos fetched from Java server using a mocked location JSON (#34)
* merging

* merge with Tim's fix on the animal phot JSONS

* Hao: I cannot get the async/subsription working prorperly in Angular, which is needed to pass the userIpLocInfo propperly. Currently I feed the Java server with a static literal object mockIpLocInfo in the main-photo.component. Also shuffle function is disabled because this require communication between the components such as the number of photos in this bundle.

--- a/Poof-O-Floof-ui/src/app/main-photo/main-photo.component.html
+++ b/Poof-O-Floof-ui/src/app/main-photo/main-photo.component.html
@@ -11,21 +11,12 @@
   <img src="{{mainFramePhotoUrl}}">
 </div>
 
-<button (click)="getNewPhotoUrl()">
-  Get A New Photo
-</button>
-<br />
-<br />
-
 <div>
-    <img src="{{photoUrl}}">
-  </div> -->
+  <img src="{{photoUrl}}">
+</div>
 
 <div class="text-center">
   <div class="col-sm-8 offset-sm-2">
     <a routerLink="/social-media" class="btn btn-link">Share</a>
   </div>
 </div>
-
-<br />
-<br />
