trying to implement favorite, committing to merge (#45)

--- a/Poof-O-Floof-ui/src/app/main-photo/main-photo.component.html
+++ b/Poof-O-Floof-ui/src/app/main-photo/main-photo.component.html
@@ -14,6 +14,12 @@
   <img src="{{mainFramePhotoUrl}}">
 </div>
 
+<br />
+<button (click)="addToFavorites()">
+    Favorite Photo
+</button>
+<br />
+
 <div class="text-center">
   <div class="col-sm-8 offset-sm-2">
     <a routerLink="/social-media" class="btn btn-link">Share</a>
