added gallery functionality for favorite photos, works for hard coded photo urls

--- a/Poof-O-Floof-ui/src/app/favorites/favorites.component.html
+++ b/Poof-O-Floof-ui/src/app/favorites/favorites.component.html
@@ -1,4 +1,7 @@
 <p>favorites works!</p>
 <p>List of Favorite poofies and floofies</p>
 
-<img src="{{favFramePhotoUrl}}">
+<p>Current favorite photo here</p>
+<!-- <img src="{{favFramePhotoUrl}}"> -->
+<!-- <img src="{{testPhotoUrl}}"> -->
+<ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
