--- a/Poof-O-Floof-ui/src/app/app.component.html
+++ b/Poof-O-Floof-ui/src/app/app.component.html
@@ -295,6 +295,8 @@
   Update Coordinates
 </button>
 
+<!-- <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery> -->
+
 <div class="content" role="main">
   <div class="container">
     <router-outlet></router-outlet>
